[gd_scene load_steps=9 format=3 uid="uid://cmn2bc2rvmhb3"]

[ext_resource type="Script" uid="uid://dw41kps2fbha0" path="res://control.gd" id="1_62e2m"]
[ext_resource type="Texture2D" uid="uid://bleydx3xrostw" path="res://button.png" id="2_ee4bf"]
[ext_resource type="AudioStream" uid="uid://1qfbd2i0r2tl" path="res://light-dungeon-20241130-315314.mp3" id="2_kbped"]
[ext_resource type="FontFile" uid="uid://cxju030yqohae" path="res://Trajan Pro Regular.ttf" id="2_qtu10"]
[ext_resource type="Script" uid="uid://b0c8s8023xl1q" path="res://audio_slider.gd" id="5_fj5cn"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_kbped"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_fj5cn"]
color = Color(0.65012825, 0.6501283, 0.65012825, 1)
thickness = 2

[sub_resource type="StyleBoxLine" id="StyleBoxLine_iy58a"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_62e2m")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 84.0
offset_top = 76.0
offset_right = 412.0
offset_bottom = 136.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_kbped")
autoplay = true

[node name="main_menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="main_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 223.0
offset_top = -248.0
offset_right = 338.0
offset_bottom = -193.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.1727533, 2.1727533)
texture = ExtResource("2_ee4bf")
expand_mode = 1

[node name="start" type="Button" parent="main_menu/TextureRect"]
layout_mode = 0
offset_left = 7.8241773
offset_top = 12.426632
offset_right = 106.77697
offset_bottom = 39.58112
theme_override_fonts/font = ExtResource("2_qtu10")
text = "start"

[node name="TextureRect2" type="TextureRect" parent="main_menu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.70900005
anchor_bottom = 0.30200002
offset_left = 799.00006
offset_top = 170.0
offset_right = 139.25446
offset_bottom = 48.488922
scale = Vector2(1.5921288, 1.6175789)
texture = ExtResource("2_ee4bf")
expand_mode = 1

[node name="settings" type="Button" parent="main_menu/TextureRect2"]
layout_mode = 0
offset_left = 10.6775055
offset_top = 17.309822
offset_right = 145.71681
offset_bottom = 53.78409
theme_override_fonts/font = ExtResource("2_qtu10")
theme_override_font_sizes/font_size = 19
text = "settings"

[node name="TextureRect3" type="TextureRect" parent="main_menu"]
layout_mode = 0
offset_left = 799.0
offset_top = 267.0
offset_right = 1048.0
offset_bottom = 388.0
texture = ExtResource("2_ee4bf")
expand_mode = 1

[node name="exit" type="Button" parent="main_menu/TextureRect3"]
layout_mode = 1
anchors_preset = -1
anchor_left = -21.525002
anchor_top = -5.7250004
anchor_right = -21.525002
anchor_bottom = -5.7250004
offset_left = 5377.7256
offset_top = 721.72504
offset_right = 5591.7256
offset_bottom = 777.72504
theme_override_fonts/font = ExtResource("2_qtu10")
theme_override_font_sizes/font_size = 35
text = "exit"

[node name="settings" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Label" type="Label" parent="settings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.33900002
anchor_right = 0.5
anchor_bottom = 0.33900002
offset_left = -222.5
offset_top = -21.672012
offset_right = 222.5
offset_bottom = 21.327988
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_qtu10")
theme_override_font_sizes/font_size = 34
text = "options"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = 64.0
offset_right = 101.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ee4bf")
expand_mode = 1

[node name="back" type="Button" parent="settings/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -25.0
offset_right = 88.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_qtu10")
theme_override_font_sizes/font_size = 28
text = "back"

[node name="audio_slider" type="HSlider" parent="settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.5
offset_top = -83.0
offset_right = 107.5
offset_bottom = -67.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_kbped")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_fj5cn")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_iy58a")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("5_fj5cn")

[node name="Label2" type="Label" parent="settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -57.0
offset_right = 70.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_qtu10")
text = "master volume "
horizontal_alignment = 1

[connection signal="pressed" from="main_menu/TextureRect/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="main_menu/TextureRect2/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="main_menu/TextureRect3/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="settings/TextureRect/back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="settings/audio_slider" to="settings/audio_slider" method="_on_value_changed"]
